tree_sitter_v/test/corpus/map.txt
===
Map Literal
===

{
  'hello': 'world!',
  1: 'one',
  foo: bar
}

---

(source_file
  (map
    (keyed_element
      (interpreted_string_literal) 
      (interpreted_string_literal))
    (keyed_element
      (int_literal) (interpreted_string_literal))
    (keyed_element (field_identifier) (identifier))))
