tree_sitter_v/test/corpus/match_expression.txt
===
Match Expression
===

fn main() {
  match a {
    'test', '123' {}
    'xd' {}
    else {}
  }

  match b {
    int, string {}
    []Any {}
    else {}
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (match_expression
        (identifier)
        (expression_case 
          (case_list 
            (interpreted_string_literal)
            (interpreted_string_literal))
          (block))
        (expression_case 
          (case_list 
            (interpreted_string_literal))
          (block))
        (default_case (block))) 
      (match_expression 
        (identifier) 
        (expression_case 
          (case_list (builtin_type) (builtin_type)) 
          (block)) 
        (expression_case 
          (case_list (array_type (type_identifier))) 
          (block)) 
        (default_case (block))))))

===
Match with range
===

match b {
	0 {}
	32...126 {}
	else {}
}

---

(source_file
  (match_expression
    (identifier)
    (expression_case
      (case_list
        (int_literal))
      (block))
    (expression_case
      (case_list (range
        (int_literal)
        (int_literal)))
      (block))
    (default_case
      (block))))

===
Match with mixed expression and range
===

match b {
  33, 35...39, 42 { true }
  else { false }
}

---

(source_file
  (match_expression
    (identifier)
    (expression_case
      (case_list 
        (int_literal)
        (range (int_literal) (int_literal))
        (int_literal))
      (block (true)))
    (default_case (block (false)))))
