tree_sitter_v/test/corpus/selector_expression_incomplete.txt
===
Incomplete selector expression
===

fn main() {
  incomplete.sel.
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (selector_expression
          (identifier) (identifier))
      (ERROR))))
