tree_sitter_v/test/corpus/spawn_statement.txt
===
Spawn Statement
===

fn main() {
  spawn do_something()
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (spawn_statement
        (call_expression (identifier) (argument_list))))))
