tree_sitter_v/test/corpus/struct_declaration.txt
==================
Struct declaration
==================

struct Hello {
  hidden string
pub:
  foo string [json:'foo'] = 'hey'
  bar int = 10
pub mut:
  baz int
__global:
  blu i64
}

---

(source_file
  (struct_declaration
    (type_identifier)
    (struct_field_declaration_list
      (struct_field_declaration
        (field_identifier) (builtin_type))
      (struct_field_scope)
      (struct_field_declaration
        (field_identifier) 
        (builtin_type)
        (attribute_declaration
          (attribute_spec (identifier) (interpreted_string_literal)))
        (interpreted_string_literal))
      (struct_field_declaration
        (field_identifier) (builtin_type) (int_literal))
      (struct_field_scope)
      (struct_field_declaration
        (field_identifier) (builtin_type))
      (struct_field_scope)
      (struct_field_declaration
        (field_identifier) (builtin_type)))))
