tree_sitter_v/test/corpus/type_initializer_incomplete.txt
===
Incomplete Type Initializer
===

fn main() {
  t := Test{hello: }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (short_var_declaration
        (expression_list (identifier))
        (expression_list
          (type_initializer 
            (type_identifier)
            (literal_value
              (keyed_element 
                (field_identifier) 
                (MISSING identifier)))))))))
